--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CRUD API for precily-resizable-pane",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "CHOKIDAR_USEPOLLING=true nodemon app.js",
     "test": "CHOKIDAR_USEPOLLING=true nodemon app.js"
   },
   "dependencies": {
@@ -15,7 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2",
     "mongoose": "^6.1.4",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
